--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.4",
     "@tanstack/react-query": "^5.69.0",
     "@tanstack/react-query-devtools": "^5.71.2",
     "axios": "^1.8.4",
